Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111093

[QDoc] Fails for template instantiation with 2 types

    XMLWordPrintable

Details

    • Linux/Wayland
    • 6e68db8c1 (dev), 0f5457643 (6.4), 8d446d57e (6.5), b5da83879 (tqtc/lts-6.2)
    • DaVinci 73, DaVinci 74

    Description

      It seems that qdoc struggles with template instantiations with two types like the following.

      QHash<QByteArray, QByteArray> 

      Please see the attached error log.

       

      The related change is this one: https://codereview.qt-project.org/c/qt/qtwebengine/+/456736.

       

      I have run qdoc locally under Windows 11 following this guide https://wiki.qt.io/Qt_Build_System_Glossary#Documentation-only_Build. The QT_HOST_PATH variable I used pointed to Qt 6.6.0 prebuilt binaries installed via the Qt online installer. The error wasn't thrown then.

       

      Edit: Removing the space after the comma seems to have fixed the issue, i.e., the precheck in coin went through for the aforementioned change.

      Attachments

        1. errorlog_reopen.txt
          475 kB
        2. errorlog.txt
          467 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniö
            yigitakcay Yiğit Akçay (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes